# simulator

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Dockerfile  LICENSE  Makefile.am  README.md  configure.ac  plot.ipynb  start.sh  video.sh
.github/workflows/: c-cpp.yml
doc/: CMakeLists.txt  Makefile.am  hello.txt
doc/man1/: CMakeLists.txt
man/: algo.txt  hello.1
pkg/: .gitignore  CMakeLists.txt  PKGBUILD
pkg/arch/: PKGBUILD  PKGBUILD.in
pkg/ubuntu/: CMakeLists.txt  CPackConfig.cmake.in
src/: CMakeLists.txt  main.c  main.cpp  main.cpp.in  utils.c  utils.h
src/book/: 1Dadditive.c  1DbareBones.c  1Ddielectric.c  1Dlossy.c  1Dmatched.c  1Dtfsf.c  CMakeLists.txt  book.h  oneEleventh.c  rootTest.c
